--- a/gazebo/gui/resources.qrc
+++ b/gazebo/gui/resources.qrc
@@ -79,6 +79,6 @@
   <file>images/splash.svg</file>
   <file>images/swap-parent-child.png</file>
   <file>images/child-link.png</file>
-  <file>images/settings.png</file>
+  <file>images/settings.svg</file>
 </qresource>
 </RCC>
