--- a/gazebo/gui/resources.qrc
+++ b/gazebo/gui/resources.qrc
@@ -21,6 +21,9 @@
   <file>images/scale.png</file>
   <file>images/arrow.png</file>
   <file>images/down_arrow.png</file>
+  <file>images/branch-more.png</file>
+  <file>images/branch-end.png</file>
+  <file>images/vline.png</file>
   <file>images/box_selection.png</file>
   <file>images/redo.png</file>
   <file>images/rulers.png</file>
@@ -82,5 +85,13 @@
   <file>images/swap-parent-child.png</file>
   <file>images/child-link.png</file>
   <file>images/settings.svg</file>
+  <file>images/graph_line.svg</file>
+
+  <file>fonts/Roboto-Black.ttf</file>
+  <file>fonts/Roboto-Bold.ttf</file>
+  <file>fonts/Roboto-Light.ttf</file>
+  <file>fonts/Roboto-Medium.ttf</file>
+  <file>fonts/Roboto-Regular.ttf</file>
+  <file>fonts/Roboto-Thin.ttf</file>
 </qresource>
 </RCC>
