--- a/gazebo/gui/style.qss
+++ b/gazebo/gui/style.qss
@@ -35,6 +35,7 @@ QDialog
 QDialog#plotWindow
 {
   background-color: #f2f2f2;
+  font-family: Roboto;
 }
 
 QWidget#plotCanvas
@@ -102,6 +103,22 @@ QFrame#plotCanvasFrame
   background-color: #ffffff;
   border-radius: 0px;
   padding: 0px;
+}
+
+QFrame#plotPaletteCollapseFiller
+{
+  background-color: #dddddd;
+  margin: 0px;
+  padding: 0px;
+}
+
+QFrame#plotPaletteFrame
+{
+  background-color: #dddddd;
+  border: 0px;
+  border-radius: 0px;
+  padding: 0px;
+  margin: 0px;
 }
 
 
@@ -251,6 +268,18 @@ QToolButton:checked
   background-color: #454545;
 }
 
+QPushButton#plotPaletteCollapse
+{
+  padding: 4px;
+  font-weight: 300;
+  background-color: rgba(120,120,120,255);
+  color: #ffffff;
+  text-align: center;
+  border: 0px;
+  margin: 0px;
+  padding-bottom: 11px;
+}
+
 QPushButton#plotAddCanvas
 {
   padding: 8px;
@@ -384,6 +413,45 @@ QTreeView QHeaderView:section
   font-weight: bold;
   background: #404040;
   border: 0px;
+}
+
+QTreeView#topicList::branch:selected:!active
+{
+  background-color: #dddddd;
+}
+
+QTreeView#topicList::branch:selected:active
+{
+  background-color: #dddddd;
+}
+
+QTreeView#topicList::branch:has-siblings:!adjoins-item
+{
+  border-image: url(:/images/vline.png) 0;
+}
+
+QTreeView#topicList::branch:has-siblings:adjoins-item
+{
+  border-image: url(:/images/branch-more.png) 0;
+}
+
+QTreeView#topicList::branch:!has-children:!has-siblings:adjoins-item
+{
+  border-image: url(:/images/branch-end.png) 0;
+}
+
+QTreeView#topicList::branch:has-children:!has-siblings:closed,
+QTreeView#topicList::branch:closed:has-children:has-siblings
+{
+  border-image: none;
+  image: url(:/images/right_arrow.png);
+}
+
+QTreeView#topicList::branch:open:has-children:!has-siblings,
+QTreeView#topicList::branch:open:has-children:has-siblings
+{
+  border-image: none;
+  image: url(:/images/down_arrow.png);
 }
 
 QLineEdit
@@ -859,3 +927,65 @@ QTextEdit#splashVersionTextEdit
   color: #f58113;
   font-size: 10px;
 }
+
+QTabBar#plottingTabBar::tab
+{
+  border-radius: 0px;
+  border: 0px;
+}
+
+QTabBar#plottingTabBar::tab:focus
+{
+  outline: 0px;
+}
+
+QTabBar#plottingTabBar::tab
+{
+  min-width: 8ex;
+  color: #f2f2f2;
+  background-color: rgba(120,120,120,255);
+
+  padding: 4px;
+  font-weight: 200;
+  padding-bottom: 10px;
+}
+
+QTabBar#plottingTabBar::tab:selected
+{
+  color: #f58113;
+  background-color: rgba(120,120,120,255);
+  border-bottom: 1px solid #f58113;
+}
+
+QTabBar#plottingTabBar::tab:first:selected
+{
+  margin-left: 0;
+}
+
+QTabBar#plottingTabBar::tab:last:selected
+{
+  margin-right: 0;
+}
+
+QTabBar#plottingTabBar::tab::only-one
+{
+  margin-left: 0;
+  margin-right: 0;
+}
+
+QTabBar#plottingTabBar
+{
+  background-color: rgba(120,120,120,255);
+  margin: 0px;
+  padding: 0px;
+}
+
+QTabBar#plottingTabBar::pane,
+{
+  background-color: #777777;
+  padding: 0px;
+  margin: 0px;
+  border: 0px;
+  color: #fafafa;
+}
+
