--- a/gazebo/gui/resources.qrc
+++ b/gazebo/gui/resources.qrc
@@ -88,10 +88,16 @@
   <file>images/graph_line.svg</file>
 
   <file>fonts/Roboto-Black.ttf</file>
+  <file>fonts/Roboto-BlackItalic.ttf</file>
   <file>fonts/Roboto-Bold.ttf</file>
+  <file>fonts/Roboto-BoldItalic.ttf</file>
+  <file>fonts/Roboto-Italic.ttf</file>
   <file>fonts/Roboto-Light.ttf</file>
+  <file>fonts/Roboto-LightItalic.ttf</file>
   <file>fonts/Roboto-Medium.ttf</file>
+  <file>fonts/Roboto-MediumItalic.ttf</file>
   <file>fonts/Roboto-Regular.ttf</file>
   <file>fonts/Roboto-Thin.ttf</file>
+  <file>fonts/Roboto-ThinItalic.ttf</file>
 </qresource>
 </RCC>
