--- a/gazebo/gui/style.qss
+++ b/gazebo/gui/style.qss
@@ -951,19 +951,26 @@ QTabBar#plottingTabBar::tab:focus
 QTabBar#plottingTabBar::tab
 {
   min-width: 8ex;
-  color: #f2f2f2;
   background-color: rgba(120,120,120,255);
 
-  padding: 4px;
-  font-weight: 800;
-  padding-bottom: 10px;
+  margin: 0px;
+  padding: 10px;
+}
+
+QTabBar#plottingTabBar::tab:!selected
+{
+  color: rgba(240, 240, 240, 180);
+  background-color: rgba(120,120,120,255);
+  border-bottom: 2px solid rgba(0, 0, 0, 0);
+  font-weight: 400;
 }
 
 QTabBar#plottingTabBar::tab:selected
 {
   color: #f58113;
   background-color: rgba(120,120,120,255);
-  border-bottom: 1px solid #f58113;
+  border-bottom: 2px solid #f58113;
+  font-weight: 600;
 }
 
 QTabBar#plottingTabBar::tab:first:selected
