--- a/gazebo/gui/resources.qrc
+++ b/gazebo/gui/resources.qrc
@@ -86,6 +86,7 @@
   <file>images/child-link.png</file>
   <file>images/settings.svg</file>
   <file>images/graph_line.svg</file>
+  <file>images/search.svg</file>
 
   <file>fonts/Roboto-Black.ttf</file>
   <file>fonts/Roboto-BlackItalic.ttf</file>
