joint position and velocity
--HG--
branch : plotting_palette_models_2

--- a/gazebo/gui/resources.qrc
+++ b/gazebo/gui/resources.qrc
@@ -89,6 +89,7 @@
   <file>images/search.svg</file>
   <file>images/model.svg</file>
   <file>images/link.svg</file>
+  <file>images/joint.svg</file>
 
   <file>fonts/Roboto-Black.ttf</file>
   <file>fonts/Roboto-BlackItalic.ttf</file>
