Added hover to Palette tab names. Only text turns to orange.
--HG--
branch : hover

--- a/gazebo/gui/style.qss
+++ b/gazebo/gui/style.qss
@@ -982,12 +982,26 @@ QTabBar#plottingTabBar::tab:!selected
   font-weight: 400;
 }
 
+QTabBar#plottingTabBar::tab:!hover
+{
+  color: rgba(240,240,240,180);
+  background-color: rgba(120,120,120,255);
+  border-bottom: 2px solid rgba(0,0,0,0);
+  font-weight: 400;
+}
+
 QTabBar#plottingTabBar::tab:selected
 {
   color: #f58113;
   background-color: rgba(120,120,120,255);
   border-bottom: 2px solid #f58113;
   font-weight: 600;
+}
+
+QTabBar#plottingTabBar::tab:hover
+{
+  color: #f58113;
+  background-color: rgba(120,120,120,255);
 }
 
 QTabBar#plottingTabBar::tab:first:selected
