plot icon on toolbar
--HG--
branch : plotting_tweaks

--- a/gazebo/gui/resources.qrc
+++ b/gazebo/gui/resources.qrc
@@ -86,6 +86,7 @@
   <file>images/child-link.png</file>
   <file>images/settings.svg</file>
   <file>images/graph_line.svg</file>
+  <file>images/graph_line_toolbar.svg</file>
   <file>images/search.svg</file>
   <file>images/model.svg</file>
   <file>images/link.svg</file>
