--- a/gazebo/gui/style.qss
+++ b/gazebo/gui/style.qss
@@ -146,6 +146,11 @@ QToolButton
   border: 0px solid #808080;
 }
 
+QWidget#plotEditTitle > QLabel:hover
+{
+  border-bottom: 1px solid white;
+}
+
 QToolBar#plotToolbar > QToolButton:hover
 {
   border: 0px;
